# biibaa

./: .gitignore  LICENSE  README.md  SPEC.md  env.sample  pyproject.toml
.github/workflows/: deploy-site.yml  warehouse-smoke.yml
data/briefs/npm/: facebook__react-native.md  facebook__react.md  microsoft__vscode.md  node-tesseract-ocr.md  vercel__next.js.md  vuejs__vue.md  xmldom.md
docs/integrations/: oso-bigquery.md
examples/briefs/2026-04-26/: angular__platform-server.md  angular__ssr.md  anthropic-ai__claude-code.md  apollo__federation-internals.md  apollo__gateway.md  apollo__query-planner.md  better-auth.md  better-auth__oauth-provider.md  brace-expansion.md  budibase__backend-core.md  chalk.md  clerk__nextjs.md  clerk__shared.md  convict.md  (+38 more)
scripts/: oso_bigquery_dependents.py  oso_bigquery_probe.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts
sqlmesh/: config.py
sqlmesh/audits/: no_archived_active_opps.sql  score_in_range.sql  valid_opportunity_state.sql  valid_to_state.sql
sqlmesh/macros/: __init__.py
src/biibaa/: scoring.py
tests/: test_advisory_outdated_filter.py  test_advisory_sibling_patched_filter.py  test_bench_info.py  test_brief_frontmatter.py  test_circuit_breaker.py  test_dependents_cache.py  test_dependents_tiered.py  test_direct_deps_filter.py  test_e18e.py  test_ecosyste_ms.py  test_github_advisories.py  test_github_repo.py  test_npm_registry.py  test_pipeline_filter.py  test_pyoso_dependents.py  test_scoring.py  test_semver.py  test_sqlmesh_plan.py  test_warehouse_landing.py
(+1069 files in other folders)
