[project]
name = "biibaa"
version = "0.0.1"
description = "Open Source Improvement Opportunity Tracker — surfaces low-effort, high-impact contribution targets"
readme = "SPEC.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OpenHackersClub" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "typer>=0.12",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
pyoso = ["pyoso>=0.9"]
warehouse = ["sqlmesh[duckdb]>=0.150"]

[project.scripts]
biibaa = "biibaa.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/biibaa"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Typer idiomatically uses typer.Option(...) as default-arg sentinel.
"src/biibaa/cli/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]
